--- a/OQ002_declustering.ipynb
+++ b/OQ002_declustering.ipynb
@@ -28,9 +28,8 @@
     "jika tidak maka ubah lokasi tersebut sesuai dengan komputer masing-masing)\n",
     "\n",
     "1. Buka Command Prompt\n",
-    "2. Install `utm`: `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m pip install utm`\n",
-    "3. Install `jupyter`: `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m pip install jupyter`\n",
-    "4. Daftarkan ke dalam kernel (opsional): `python -m ipykernel install --name \"openquake\" --display-name \"openquake\"`\n",
+    "2. Install `jupyter`: `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m pip install jupyter`\n",
+    "3. Daftarkan ke dalam kernel (opsional): `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m ipykernel install --name \"openquake\" --display-name \"openquake\"`\n",
     "\n",
     "\n",
     "Untuk uji coba, jalankan salah satu baris di bawah ini:\n",
@@ -115,7 +114,7 @@
    "id": "34ac3ccb",
    "metadata": {},
    "source": [
-    "## 4. Katalog gempa"
+    "## 3. Katalog gempa"
    ]
   },
   {
@@ -123,7 +122,7 @@
    "id": "b594b7a4",
    "metadata": {},
    "source": [
-    "### 4.1 Membaca data katalog dalam format csv"
+    "### 3.1 Membaca data katalog dalam format csv"
    ]
   },
   {
@@ -140,7 +139,10 @@
     "# baca data katalog yang berada di harddisk\n",
     "catalogue_filename = \"katalog-ISC-1964-2021.csv\"\n",
     "parser = CsvCatalogueParser(catalogue_filename)\n",
-    "catalogue = parser.read_file()"
+    "catalogue = parser.read_file()\n",
+    "\n",
+    "# simpan data katalog dalam bentuk dict\n",
+    "catalogue_to_pkl(catalogue, 'dict_catalogue.pkl')"
    ]
   },
   {
@@ -148,7 +150,7 @@
    "id": "c5b572c9",
    "metadata": {},
    "source": [
-    "### 4.2 Melihat sebaran data berdasarkan waktu kejadian dan magnitudo"
+    "### 3.2 Melihat sebaran data berdasarkan waktu kejadian dan magnitudo"
    ]
   },
   {
@@ -194,32 +196,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa3cb60",
-   "metadata": {},
-   "source": [
-    "### 4.3 Simpan data katalog ke format pkl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "617a94a3",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "catalogue_to_pkl(catalogue, 'dict_catalogue.pkl')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "707dba46",
    "metadata": {},
    "source": [
-    "## 5. Declustering"
+    "## 4. Declustering"
    ]
   },
   {
@@ -227,7 +207,7 @@
    "id": "3e16b4cf",
    "metadata": {},
    "source": [
-    "### 5.1 Proses utama"
+    "### 4.1 Proses utama"
    ]
   },
   {
@@ -250,56 +230,21 @@
     }
    ],
    "source": [
+    "# konfigurasi declustering\n",
     "declust_config = {'time_distance_window': UhrhammerWindow() ,\n",
     "                  'fs_time_prop': 1.0}\n",
     "\n",
+    "# fungsi utama declustering\n",
     "catalogue_declustered = catalogue_declustering(catalogue, declust_config)\n",
     "\n",
+    "# tampilkan jumlah data sebelum dan setelah di-declustered\n",
     "print(\"sebelum didekluster: \", len(catalogue['eventID']), \" events\")\n",
-    "print(\"setelah didekluster: \", len(catalogue_declustered['eventID']), \" events\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18ba95e4",
-   "metadata": {},
-   "source": [
-    "### 5.2 Simpan data katalog ke format pkl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "cf023cf2",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "catalogue_to_pkl(catalogue_declustered, 'dict_catalogue_declustered.pkl')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0adb1df",
-   "metadata": {},
-   "source": [
-    "### 5.3 Simpan data katalog ke format pkl khusus untuk dibaca di OQ004"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c85791dc",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "print(\"setelah didekluster: \", len(catalogue_declustered['eventID']), \" events\")\n",
+    "\n",
+    "# simpan data katalog dalam bentuk dict\n",
+    "catalogue_to_pkl(catalogue_declustered, 'dict_catalogue_declustered.pkl')\n",
+    "\n",
+    "# simpan data katalog dalam format openquake (yang digunakan di file OQxxx selanjutnya)\n",
     "variable_to_pkl(catalogue_declustered, 'tmp_OQ002_catalogue_declustered.pkl')"
    ]
   },
@@ -308,7 +253,7 @@
    "id": "fbc5d411",
    "metadata": {},
    "source": [
-    "### 5.3 Melihat sebaran data berdasarkan waktu kejadian dan magnitudo"
+    "### 4.2 Melihat sebaran data berdasarkan waktu kejadian dan magnitudo"
    ]
   },
   {
@@ -357,7 +302,7 @@
    "id": "d25ff387",
    "metadata": {},
    "source": [
-    "### 5.4 Magnitude of Completeness (Mc)"
+    "### 4.3 Magnitude of Completeness (Mc)"
    ]
   },
   {
@@ -467,7 +412,7 @@
    "id": "53663199",
    "metadata": {},
    "source": [
-    "### 5.4.1 Plot Mc"
+    "### 4.3.1 Plot Mc"
    ]
   },
   {
@@ -518,7 +463,7 @@
    "id": "7795c592",
    "metadata": {},
    "source": [
-    "### 5.4.2 Plot Mc di Annual Rate"
+    "### 4.3.2 Plot Mc di Annual Rate"
    ]
   },
   {
@@ -569,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -583,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
