--- a/OQ003_geometri_sumber_gempa.ipynb
+++ b/OQ003_geometri_sumber_gempa.ipynb
@@ -95,20 +95,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# konfigurasi patahan (cek berdasarkan indeks di atas)\n",
+    "# LAKUKAN SECARA MANUAL\n",
+    "### konfigurasi patahan (cek berdasarkan indeks di atas) ###\n",
+    "\n",
     "dict_config = {\n",
     "    \"merged\": [\n",
     "        [0,1,2,3,4,5,6]\n",
     "    ],\n",
     "    \"individual\": [\n",
     "        7\n",
+    "    ],\n",
+    "    \"merged_depth\": [\n",
+    "        20\n",
+    "    ],\n",
+    "    \"individual_depth\": [\n",
+    "        20\n",
     "    ]\n",
     "}\n",
     "\n",
-    "fault_geoms = select_faults(gdf_faults, dict_config)\n",
+    "############################################################\n",
     "\n",
-    "# save to pkl\n",
-    "variable_to_pkl(fault_geoms, 'tmp_OQ003_fault_geoms.pkl')"
+    "fault_geoms, dict_faults = select_faults(gdf_faults, dict_config)\n",
+    "\n",
+    "# simpan geometri ke dalam file pkl\n",
+    "variable_to_pkl(fault_geoms, 'tmp_OQ003_fault_geoms.pkl')\n",
+    "variable_to_pkl(dict_faults, 'dict_faults.pkl')"
    ]
   },
   {
@@ -127,6 +138,13 @@
     "    ],\n",
     "    \"individual\": [\n",
     "        9,10,11\n",
+    "    ],\n",
+    "    \"merged_depth\": [\n",
+    "        20,\n",
+    "        30\n",
+    "    ],\n",
+    "    \"individual_depth\": [\n",
+    "        20,20,30\n",
     "    ]\n",
     "}\n",
     "```\n",
@@ -138,7 +156,12 @@
     "        [0,1,2,3],\n",
     "        [4,5,6]\n",
     "    ],\n",
-    "    \"individual\": None\n",
+    "    \"individual\": None,\n",
+    "    \"merged_depth\": [\n",
+    "        20,\n",
+    "        30\n",
+    "    ],\n",
+    "    \"individual_depth\": None\n",
     "}\n",
     "```\n",
     "atau\n",
@@ -147,6 +170,10 @@
     "    \"merged\": None,\n",
     "    \"individual\": [\n",
     "        0,1,2,3,4,5,6,7\n",
+    "    ],\n",
+    "    \"merged_depth\": None\n",
+    "    \"individual_depth\": [\n",
+    "        20,20,20,20,20,20,20,20\n",
     "    ]\n",
     "}\n",
     "```"
@@ -196,6 +223,15 @@
     }
    ],
    "source": [
+    "# LAKUKAN SECARA MANUAL\n",
+    "### bagian yang di edit ###\n",
+    "\n",
+    "megathrust_ke = 0\n",
+    "\n",
+    "indeks_pemisah = 4\n",
+    "\n",
+    "###########################\n",
+    "\n",
     "# matplotlib\n",
     "fig, ax = plt.subplots(figsize=(8,8))\n",
     "\n",
@@ -203,7 +239,7 @@
     "shp_coast.plot(color='none', edgecolor='black', linewidth=1, ax=ax)\n",
     "\n",
     "# check polygon\n",
-    "check_megathrust_delimiter(gdf_megathrusts, idx=0, delimiter_number=4, ax=ax)"
+    "check_megathrust_delimiter(gdf_megathrusts, idx=megathrust_ke, delimiter_number=indeks_pemisah, ax=ax)"
    ]
   },
   {
@@ -216,16 +252,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "terdapat  2  megathrust\n"
+      "terdapat 2 megathrust\n"
      ]
     }
    ],
    "source": [
-    "idcs = [4, 6]\n",
-    "upper_configs = ['r', 'r']\n",
-    "megathrust_geoms = create_megathrust_coords(gdf_megathrusts, idcs, upper_configs, upper_depth=0, lower_depth=50)\n",
-    "print(\"terdapat \", len(megathrust_geoms), \" megathrust\")\n",
+    "# LAKUKAN SECARA MANUAL\n",
+    "### Masukkan hasil indeks pemisah pada masing-masing megathrust di sini #######\n",
+    "### Kode warna bagian atas dapat dilihat pada gambar di atas (lihat legenda) ##\n",
     "\n",
+    "indeks_pemisah_masing2_megathrust = [4, 6]\n",
+    "\n",
+    "kode_warna_bagian_atas = ['r', 'r']\n",
+    "\n",
+    "###############################################################################\n",
+    "\n",
+    "megathrust_geoms = create_megathrust_coords(gdf_megathrusts, indeks_pemisah_masing2_megathrust, \n",
+    "                                            kode_warna_bagian_atas, upper_depth=0, lower_depth=50)\n",
+    "print(\"terdapat\", len(megathrust_geoms), \"megathrust\")\n",
+    "\n",
+    "# simpan geometri megathrust ke file pkl\n",
     "variable_to_pkl(megathrust_geoms, \"tmp_OQ003_megathrust_geoms.pkl\")"
    ]
   },
@@ -244,6 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# LANGSUNG JALANKAN SAJA (setelah mengganti nama file)\n",
     "# open shallow background\n",
     "gdf_shallow_background = gpd.read_file('./shp/shallow_background.shp')\n",
     "\n",
@@ -269,6 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# LANGSUNG JALANKAN SAJA (setelah mengganti nama file)\n",
     "# open deep background\n",
     "gdf_deep_background = gpd.read_file('./shp/deep_background.shp')\n",
     "\n",
