--- a/OQ006_menghindari_double_counting.ipynb
+++ b/OQ006_menghindari_double_counting.ipynb
@@ -28,9 +28,8 @@
     "jika tidak maka ubah lokasi tersebut sesuai dengan komputer masing-masing)\n",
     "\n",
     "1. Buka Command Prompt\n",
-    "2. Install `utm`: `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m pip install utm`\n",
-    "3. Install `jupyter`: `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m pip install jupyter`\n",
-    "4. Daftarkan ke dalam kernel (opsional): `python -m ipykernel install --name \"openquake\" --display-name \"openquake\"`\n",
+    "2. Install `jupyter`: `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m pip install jupyter`\n",
+    "3. Daftarkan ke dalam kernel (opsional): `\"C:\\Program Files\\Openquake Engine\\python3.6\\python.exe\" -m ipykernel install --name \"openquake\" --display-name \"openquake\"`\n",
     "\n",
     "\n",
     "Untuk uji coba, jalankan salah satu baris di bawah ini:\n",
@@ -69,36 +68,8 @@
    },
    "outputs": [],
    "source": [
-    "from custom_openquake import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d01ab0e9",
-   "metadata": {},
-   "source": [
-    "## 2. Tambahan"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6467d5e2",
-   "metadata": {},
-   "source": [
-    "### 2.2 Variabel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6583c093",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "from custom_openquake import *\n",
+    "\n",
     "# folder penyimpanan\n",
     "dir_figs = os.path.join(os.getcwd(), 'figs')\n",
     "os.makedirs(dir_figs, exist_ok=True)"
@@ -274,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
