--- a/OQ003_geometri_sumber_gempa.ipynb
+++ b/OQ003_geometri_sumber_gempa.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "87b561eb",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7bf5c2dc",
    "metadata": {},
    "outputs": [
@@ -77,20 +77,20 @@
       "4    Semangkobarat-B\n",
       "5    SemangkoTimur-B\n",
       "6     SemangkoGraben\n",
-      "7            Enggano\n",
-      "Name: Segment__1, dtype: object\n"
+      "7            Enggano\n"
      ]
     }
    ],
    "source": [
     "# open faults\n",
     "gdf_faults = gpd.read_file('./shp/faults.shp')\n",
-    "print(gdf_faults[\"Segment__1\"])"
+    "# print(gdf_faults[\"Fault_Na_1\"].to_string())\n",
+    "print(gdf_faults[\"Segment__1\"].to_string())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a3e54c7b",
    "metadata": {},
    "outputs": [],
@@ -189,18 +189,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9baece4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   OBJECTID   Id Name  Shape_Leng  Shape_Area  \\\n",
+      "0       4.0  0.0   M6    8.030056    3.838513   \n",
+      "1       7.0  0.0   M7    9.898832    4.603134   \n",
+      "\n",
+      "                                            geometry  \n",
+      "0  POLYGON ((100.78291 -5.14698, 102.10096 -4.228...  \n",
+      "1  POLYGON ((102.43611 -7.01734, 103.64118 -5.842...  \n"
+     ]
+    }
+   ],
    "source": [
     "# open megathrust\n",
-    "gdf_megathrusts = gpd.read_file('./shp/megathrusts.shp')"
+    "gdf_megathrusts = gpd.read_file('./shp/megathrusts.shp')\n",
+    "print(gdf_megathrusts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9a747a08",
    "metadata": {},
    "outputs": [
@@ -226,9 +241,22 @@
     "# LAKUKAN SECARA MANUAL\n",
     "### bagian yang di edit ###\n",
     "\n",
-    "megathrust_ke = 0\n",
+    "# bagian ini lihat indeks megathrust yang dicari berdasarkan print sebelumnya\n",
+    "megathrust_ke = 0                # --> nilai ini disimpan di bagian bawah\n",
     "\n",
-    "indeks_pemisah = 4\n",
+    "# bagian ini berfungsi memisahkan garis merah dan garis biru\n",
+    "indeks_pemisah = 4               # --> nilai ini disimpan di bagian bawah\n",
+    "\n",
+    "# skipped_indices digunakan apabila garis merah dan garis biru tidak terpisah dengan nilai default\n",
+    "# terdiri dari [indeks pertama, indeks terakhir]\n",
+    "# indeks pertama dimulai dari 0, 1, 2, ...\n",
+    "# indeks terakhir dimulai dari None, -1, -2, ...\n",
+    "skipped_indices = [1, None]      # --> nilai ini disimpan di bagian bawah\n",
+    "\n",
+    "map_limit = (\n",
+    "    (-9, -2),\n",
+    "    (100, 110)\n",
+    ")\n",
     "\n",
     "###########################\n",
     "\n",
@@ -239,12 +267,15 @@
     "shp_coast.plot(color='none', edgecolor='black', linewidth=1, ax=ax)\n",
     "\n",
     "# check polygon\n",
-    "check_megathrust_delimiter(gdf_megathrusts, idx=megathrust_ke, delimiter_number=indeks_pemisah, ax=ax)"
+    "check_megathrust_delimiter(gdf_megathrusts, idx=megathrust_ke, delimiter_number=indeks_pemisah, ax=ax,\n",
+    "                          skipped_indices=skipped_indices, map_limit=map_limit)\n",
+    "\n",
+    "# belum di edit koordinatnya"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fc3b5699",
    "metadata": {},
    "outputs": [
@@ -265,14 +296,39 @@
     "\n",
     "kode_warna_bagian_atas = ['r', 'r']\n",
     "\n",
+    "skipped_indices = [\n",
+    "    [1, None],\n",
+    "    [1, None],\n",
+    "]\n",
+    "\n",
     "###############################################################################\n",
     "\n",
-    "megathrust_geoms = create_megathrust_coords(gdf_megathrusts, indeks_pemisah_masing2_megathrust, \n",
-    "                                            kode_warna_bagian_atas, upper_depth=0, lower_depth=50)\n",
+    "megathrust_geoms = create_megathrust_coords(gdf_megathrusts, indeks_pemisah_masing2_megathrust,\n",
+    "                                           skipped_indices, kode_warna_bagian_atas, upper_depth=0, lower_depth=50)\n",
     "print(\"terdapat\", len(megathrust_geoms), \"megathrust\")\n",
     "\n",
     "# simpan geometri megathrust ke file pkl\n",
     "variable_to_pkl(megathrust_geoms, \"tmp_OQ003_megathrust_geoms.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0edcd339",
+   "metadata": {},
+   "source": [
+    "Contoh untuk kasus 3 megathrust dengan skipped_indices yang berbeda:\n",
+    "\n",
+    "```python\n",
+    "indeks_pemisah_masing2_megathrust = [11, 6, 12]\n",
+    "\n",
+    "kode_warna_bagian_atas = ['b', 'r', 'b']\n",
+    "\n",
+    "skipped_indices = [\n",
+    "    [1, -1],\n",
+    "    [1, -1],\n",
+    "    [1, -2]\n",
+    "]\n",
+    "```"
    ]
   },
   {
@@ -285,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3cb93426",
    "metadata": {},
    "outputs": [],
@@ -311,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e150d840",
    "metadata": {},
    "outputs": [],
