--- a/OQ006_menghindari_double_counting.ipynb
+++ b/OQ006_menghindari_double_counting.ipynb
@@ -77,161 +77,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ac3ccb",
+   "id": "5c36eef5",
    "metadata": {},
    "source": [
-    "## 3. Katalog gempa"
+    "## 2. Remove selected events"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5d403477",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# membuka data pkl\n",
-    "catalogue_area_faults = open_pkl(\"tmp_OQ004_catalogue_area_faults.pkl\")\n",
-    "catalogue_megathrusts = open_pkl(\"tmp_OQ004_catalogue_megathrusts.pkl\")\n",
-    "catalogue_shallow_backgrounds = open_pkl(\"tmp_OQ004_catalogue_shallow_backgrounds.pkl\")\n",
-    "catalogue_deep_backgrounds, range_list = open_pkl(\"tmp_OQ004_catalogue_deep_backgrounds.pkl\")\n",
-    "\n",
-    "catalogue_sumatera_fault = catalogue_area_faults['merged'][0]\n",
-    "catalogue_mentawai_fault = catalogue_area_faults['individual'][0]\n",
-    "catalogue_megathrust_1 = catalogue_megathrusts[0]\n",
-    "catalogue_megathrust_2 = catalogue_megathrusts[1]\n",
-    "catalogue_shallow_background_1 = catalogue_shallow_backgrounds[0]\n",
-    "catalogue_deep_background_1_1 = catalogue_deep_backgrounds[0][0]\n",
-    "catalogue_deep_background_1_2 = catalogue_deep_backgrounds[0][1]\n",
-    "catalogue_deep_background_1_3 = catalogue_deep_backgrounds[0][2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86c0f621",
-   "metadata": {},
-   "source": [
-    "## 4. Filter area faults dari data megathrusts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8a36265b",
+   "execution_count": 2,
+   "id": "c75a5175",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jumlah gempa yang dihapus:  0\n",
-      "jumlah gempa yang dihapus:  0\n",
-      "jumlah gempa yang dihapus:  2\n",
-      "jumlah gempa yang dihapus:  2\n",
-      "jumlah gempa yang dihapus:  94\n",
-      "jumlah gempa yang dihapus:  97\n",
-      "jumlah gempa yang dihapus:  346\n",
-      "jumlah gempa yang dihapus:  230\n",
-      "jumlah gempa yang dihapus:  113\n",
-      "jumlah gempa yang dihapus:  108\n",
-      "jumlah gempa yang dihapus:  0\n",
-      "jumlah gempa yang dihapus:  0\n",
-      "jumlah gempa yang dihapus:  0\n",
-      "jumlah gempa yang dihapus:  0\n",
-      "jumlah gempa yang dihapus:  0\n",
-      "jumlah gempa yang dihapus:  0\n"
+      "jumlah gempa yang dihapus:  346\n"
      ]
     }
    ],
    "source": [
-    "###\n",
-    "catalogue_sumatera_fault_filt_1 = remove_events_in_A_from_B(catalogue_sumatera_fault, \n",
-    "                                                            catalogue_megathrust_1)\n",
+    "catalogue_1 = catalogue_from_pkl('dict_catalogue_fault_KumeringNorth_KumeringSouth_Semangkobarat-A_SemangkoTimur-A_Semangkobarat-B_SemangkoTimur-B_SemangkoGraben.pkl')\n",
     "\n",
-    "catalogue_sumatera_fault_filt_2 = remove_events_in_A_from_B(catalogue_sumatera_fault_filt_1, \n",
-    "                                                            catalogue_megathrust_2)\n",
+    "catalogue_2 = catalogue_from_pkl('dict_catalogue_shallow_background_1.pkl')\n",
     "\n",
-    "###\n",
-    "catalogue_mentawai_fault_filt_1 = remove_events_in_A_from_B(catalogue_mentawai_fault, \n",
-    "                                                            catalogue_megathrust_1)\n",
+    "catalogue_filt = remove_events_in_A_from_B(catalogue_2, catalogue_1)\n",
     "\n",
-    "catalogue_mentawai_fault_filt_2 = remove_events_in_A_from_B(catalogue_mentawai_fault_filt_1, \n",
-    "                                                            catalogue_megathrust_2)\n",
+    "catalogue_to_pkl(catalogue_filt, filename=\"filt_dict_catalogue_shallow_background_1.pkl\")\n",
     "\n",
-    "###\n",
-    "catalogue_shallow_background_1_filt_1 = remove_events_in_A_from_B(catalogue_shallow_background_1, \n",
-    "                                                            catalogue_megathrust_1)\n",
-    "\n",
-    "catalogue_shallow_background_1_filt_2 = remove_events_in_A_from_B(catalogue_shallow_background_1_filt_1, \n",
-    "                                                            catalogue_megathrust_2)\n",
-    "\n",
-    "catalogue_shallow_background_1_filt_3 = remove_events_in_A_from_B(catalogue_shallow_background_1_filt_2, \n",
-    "                                                            catalogue_sumatera_fault_filt_2)\n",
-    "\n",
-    "catalogue_shallow_background_1_filt_4 = remove_events_in_A_from_B(catalogue_shallow_background_1_filt_3, \n",
-    "                                                            catalogue_mentawai_fault_filt_2)\n",
-    "\n",
-    "###\n",
-    "catalogue_deep_background_1_1_filt_1 = remove_events_in_A_from_B(catalogue_deep_background_1_1, \n",
-    "                                                            catalogue_megathrust_1)\n",
-    "\n",
-    "catalogue_deep_background_1_1_filt_2 = remove_events_in_A_from_B(catalogue_deep_background_1_1_filt_1, \n",
-    "                                                            catalogue_megathrust_2)\n",
-    "\n",
-    "###\n",
-    "catalogue_deep_background_1_2_filt_1 = remove_events_in_A_from_B(catalogue_deep_background_1_2, \n",
-    "                                                            catalogue_megathrust_1)\n",
-    "\n",
-    "catalogue_deep_background_1_2_filt_2 = remove_events_in_A_from_B(catalogue_deep_background_1_2_filt_1, \n",
-    "                                                            catalogue_megathrust_2)\n",
-    "\n",
-    "catalogue_deep_background_1_2_filt_3 = remove_events_in_A_from_B(catalogue_deep_background_1_2_filt_2, \n",
-    "                                                            catalogue_deep_background_1_1_filt_2)\n",
-    "\n",
-    "###\n",
-    "catalogue_deep_background_1_3_filt_1 = remove_events_in_A_from_B(catalogue_deep_background_1_3, \n",
-    "                                                            catalogue_megathrust_1)\n",
-    "\n",
-    "catalogue_deep_background_1_3_filt_2 = remove_events_in_A_from_B(catalogue_deep_background_1_3_filt_1, \n",
-    "                                                            catalogue_megathrust_2)\n",
-    "\n",
-    "catalogue_deep_background_1_3_filt_3 = remove_events_in_A_from_B(catalogue_deep_background_1_3_filt_2, \n",
-    "                                                            catalogue_deep_background_1_2_filt_3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4a4d510e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalogue_to_pkl(catalogue_sumatera_fault_filt_2, \"dict_catalogue_sumatera_fault_filt_2.pkl\")\n",
-    "catalogue_to_pkl(catalogue_mentawai_fault_filt_2, \"dict_catalogue_mentawai_fault_filt_2.pkl\")\n",
-    "catalogue_to_pkl(catalogue_megathrust_1, \"dict_catalogue_megathrust_1.pkl\")\n",
-    "catalogue_to_pkl(catalogue_megathrust_2, \"dict_catalogue_megathrust_2.pkl\")\n",
-    "catalogue_to_pkl(catalogue_shallow_background_1_filt_4, \"dict_catalogue_shallow_background_1_filt_4.pkl\")\n",
-    "catalogue_to_pkl(catalogue_deep_background_1_1_filt_2, \"dict_catalogue_deep_background_1_1_filt_2.pkl\")\n",
-    "catalogue_to_pkl(catalogue_deep_background_1_2_filt_3, \"dict_catalogue_deep_background_1_2_filt_3.pkl\")\n",
-    "catalogue_to_pkl(catalogue_deep_background_1_3_filt_3, \"dict_catalogue_deep_background_1_3_filt_3.pkl\")\n",
-    "\n",
-    "variable_to_pkl(\n",
-    "    (\n",
-    "        catalogue_sumatera_fault_filt_2,\n",
-    "        catalogue_mentawai_fault_filt_2,\n",
-    "        catalogue_megathrust_1,\n",
-    "        catalogue_megathrust_2,\n",
-    "        catalogue_shallow_background_1_filt_4,\n",
-    "        catalogue_deep_background_1_1_filt_2,\n",
-    "        catalogue_deep_background_1_2_filt_3,\n",
-    "        catalogue_deep_background_1_3_filt_3\n",
-    "    ),\n",
-    "    \"tmp_OQ006_catalogues_filtered.pkl\"\n",
-    ")"
+    "# megathrust\n",
+    "# area fault\n",
+    "# shallow background\n",
+    "# deep background\n"
    ]
   },
   {
