--- a/OQ007_simpan_katalog_ke_format_lain.ipynb
+++ b/OQ007_simpan_katalog_ke_format_lain.ipynb
@@ -28,6 +28,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "339eca5b",
+   "metadata": {},
+   "source": [
+    "# \\#\\#\\# kernel: maps \\#\\#\\#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14ac00b8",
    "metadata": {},
    "source": [
@@ -57,21 +65,21 @@
    "execution_count": 2,
    "id": "c786d961",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Z:\\Proyek\\PYTHON\\Seismologi-Teknik-OQ\\custom_maps.py:53: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "/Users/yudhastyawan/Documents/projects/openquake/Seismologi-Teknik-OQ/custom_maps.py:80: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gdf.to_file(os.path.join(savedir, name_file))\n"
      ]
     }
    ],
    "source": [
-    "catalogue_sumatera_fault_filt_2 = open_pkl(\"dict_catalogue_sumatera_fault_filt_2.pkl\")\n",
-    "catalogue_to_shp(catalogue_sumatera_fault_filt_2, \"catalogue_sumatera_fault_filt_2.shp\")"
+    "catalogue = open_pkl(\"filt_dict_catalogue_shallow_background_1.pkl\")\n",
+    "catalogue_to_shp(catalogue, \"filt_dict_catalogue_shallow_background_1.shp\")"
    ]
   },
   {
@@ -90,13 +98,59 @@
    "outputs": [],
    "source": [
     "# buka koordinat area faults\n",
-    "area_faults_coords = open_pkl(\"tmp_OQ004_area_faults_coords.pkl\")\n",
+    "area_faults_coords = open_pkl(\"tmp_OQ004_area_faults_geoms.pkl\")\n",
     "\n",
-    "area_sumatera_faults = Polygon(area_faults_coords[\"merged\"][0])\n",
-    "area_mentawai_fault = Polygon(area_faults_coords[\"individual\"][0])\n",
-    "\n",
-    "polygon_to_shp(area_sumatera_faults, \"area_sumatera_faults.shp\")\n",
-    "polygon_to_shp(area_mentawai_fault, \"area_mentawai_fault.shp\")"
+    "for key in [\"merged\", \"individual\"]:\n",
+    "    if area_faults_coords[key] != None:\n",
+    "        for i, area in enumerate(area_faults_coords[key]):\n",
+    "            area_fault = Polygon(area)\n",
+    "            polygon_to_shp(area_fault, f\"area_faults_{key}_{i}.shp\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec9178b",
+   "metadata": {},
+   "source": [
+    "# \\#\\#\\# kernel: openquake \\#\\#\\#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd663d62",
+   "metadata": {},
+   "source": [
+    "## 1. Import packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b91cee26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from custom_openquake import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e64d4100",
+   "metadata": {},
+   "source": [
+    "## 2. Simpan dict katalog ke csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "32a15e5d",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "catalogue_pkl_to_csv(\"filt_dict_catalogue_shallow_background_1.pkl\", \"filt_dict_catalogue_shallow_background_1.csv\")"
    ]
   },
   {
