fixing custom_maps.py

--- a/OQ010_persiapan_file_SHERIFS.ipynb
+++ b/OQ010_persiapan_file_SHERIFS.ipynb
@@ -102,19 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "017121b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# menyusun ulang koordinat patahan agar searah dengan strike\n",
     "gdf_faults.geometry[6] = reverse_geom(gdf_faults.geometry[6])\n",
-    "gdf_faults.geometry[7] = reverse_geom(gdf_faults.geometry[7])"
+    "# gdf_faults.geometry[7] = reverse_geom(gdf_faults.geometry[7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ec2402e3",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
    "outputs": [],
    "source": [
     "# menyimpan area patahan ke dalam bentuk geojson\n",
-    "save_area_fault_geojson(gdf_area_faults, model=\"Lampung\")"
+    "save_area_fault_geojson(gdf_area_faults, 'json_area_fault_KumeringNorth_others.geojson', model=\"Lampung\") # belum diganti namanya"
    ]
   },
   {
