custom_openquake.py revision

--- a/OQ011_jalankan_SHERIFS.ipynb
+++ b/OQ011_jalankan_SHERIFS.ipynb
@@ -81,9 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b420ea1f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,8 +129,8 @@
       "-target filled-\n",
       "90%\n",
       "ratio between the target and the shape of the model : 1.0\n",
-      "ratio of NMS : 21\n",
-      "The calculation took: 0 days, 0 hours, 0 minutes and 46.39828872680664 seconds.\n"
+      "ratio of NMS : 20\n",
+      "The calculation took: 0 days, 0 hours, 0 minutes and 47.50304627418518 seconds.\n"
      ]
     }
    ],
