--- a/OQ004_pemisahan_katalog_sumber_gempa.ipynb
+++ b/OQ004_pemisahan_katalog_sumber_gempa.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "59458d28",
    "metadata": {
     "vscode": {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5d403477",
    "metadata": {
     "vscode": {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6365d170",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "577a6cf4",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1de7a01c",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "8bd1836c",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "8601e402",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "a3947595",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "69982d94",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
     "\n",
     "# memisahkan data katalog berdasarkan area background\n",
     "catalogue_deep_backgrounds, range_list = create_catalogue_from_deep_backgrounds(\n",
-    "    catalogue_declustered, deep_background_geoms, upper_depth=350, increment=100, lower_depth=700\n",
+    "    catalogue_declustered, deep_background_geoms, upper_depth=50, increment=100, lower_depth=350\n",
     ")\n",
     "\n",
     "# menyimpan data katalog  (cek dengan nama file \"dict_catalogue_deep_background_xxx.pkl\")\n",
@@ -398,9 +398,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "dbaca1b6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
