--- a/OQ012_membuat_source_model_xml.ipynb
+++ b/OQ012_membuat_source_model_xml.ipynb
@@ -207,6 +207,40 @@
     "    upper_depth = 0., \n",
     "    lower_depth = 20.,\n",
     "    mesh_spacing=1.0\n",
+    ")\n",
+    "\n",
+    "mtk_simple_faults.append(mtkSimpleFaultSource(\n",
+    "    identifier=\"101\", \n",
+    "    name=\"Enggano\",\n",
+    "    trt=\"Active Shallow Crust\",\n",
+    "    mag_scale_rel=\"WC1994\", \n",
+    "    rupt_aspect_ratio=1.0, \n",
+    "    mfd=TruncatedGRMFD(6.5, 7.5, 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val, \n",
+    "    rake=-90.\n",
+    "))\n",
+    "mtk_simple_faults[1].create_geometry(\n",
+    "    line_faults[1], # index sesuai dengan urutan dari total patahan\n",
+    "    dip = 45., \n",
+    "    upper_depth = 0., \n",
+    "    lower_depth = 20.,\n",
+    "    mesh_spacing=1.0\n",
+    ")\n",
+    "\n",
+    "mtk_simple_faults.append(mtkSimpleFaultSource(\n",
+    "    identifier=\"101\", \n",
+    "    name=\"Enggano\",\n",
+    "    trt=\"Active Shallow Crust\",\n",
+    "    mag_scale_rel=\"WC1994\", \n",
+    "    rupt_aspect_ratio=1.0, \n",
+    "    mfd=TruncatedGRMFD(6.5, 7.5, 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val, \n",
+    "    rake=-90.\n",
+    "))\n",
+    "mtk_simple_faults[2].create_geometry(\n",
+    "    line_faults[2], # index sesuai dengan urutan dari total patahan\n",
+    "    dip = 45., \n",
+    "    upper_depth = 0., \n",
+    "    lower_depth = 20.,\n",
+    "    mesh_spacing=1.0\n",
     ")"
    ]
   },
@@ -300,7 +334,7 @@
    "outputs": [],
    "source": [
     "idx = 0\n",
-    "complex_megathrust[idx] = reverse_megathrust(complex_megathrust[idx], part_of='lower')"
+    "complex_megathrust[idx] = reverse_megathrust(complex_megathrust[idx], part_of='lower') # lower, upper, both"
    ]
   },
   {
@@ -424,6 +458,11 @@
     "    mfd=TruncatedGRMFD(4., 7., 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val, \n",
     "    rake=-90.\n",
     "))\n",
+    "mtk_megathrusts[0].create_geometry(\n",
+    "    complex_megathrust[0], # index sesuai dengan urutan dari total patahan\n",
+    "    mesh_spacing=20.0\n",
+    ")\n",
+    "\n",
     "mtk_megathrusts.append(mtkComplexFaultSource(\n",
     "    identifier=\"103\", \n",
     "    name=\"Megathrust 2\",\n",
@@ -433,11 +472,6 @@
     "    mfd=TruncatedGRMFD(4., 7., 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val, \n",
     "    rake=-90.\n",
     "))\n",
-    "\n",
-    "mtk_megathrusts[0].create_geometry(\n",
-    "    complex_megathrust[0], # index sesuai dengan urutan dari total patahan\n",
-    "    mesh_spacing=20.0\n",
-    ")\n",
     "mtk_megathrusts[1].create_geometry(\n",
     "    complex_megathrust[1], # index sesuai dengan urutan dari total patahan\n",
     "    mesh_spacing=20.0\n",
@@ -508,6 +542,25 @@
     "    name=\"Shallow Background 1\",\n",
     "    trt=\"Stable Continental Crust\",\n",
     "    geometry=poly_shallow[0], # index sesuai dengan urutan dari total shallow background\n",
+    "    upper_depth=0, \n",
+    "    lower_depth=20, \n",
+    "    mag_scale_rel=\"WC1994\", \n",
+    "    rupt_aspect_ratio=1.0, \n",
+    "    mfd=TruncatedGRMFD(3., 6.5, 0.1, 5.03, 1.26), # min_mag, max_mag, bin_width, a_val, b_val\n",
+    "    nodal_plane_dist=PMF([\n",
+    "        (0.5, NodalPlane(135.0, 90.0, 0.0)), # (probability, NodalPlane(strike, dip, rake))\n",
+    "        (0.5, NodalPlane(315.0, 90.0, 0.0))\n",
+    "    ]), \n",
+    "    hypo_depth_dist=PMF([\n",
+    "        (0.5, 10.0), # (probability, depth)\n",
+    "        (0.5, 20.0)\n",
+    "    ])))\n",
+    "\n",
+    "mtk_shallow_background.append(mtkAreaSource(\n",
+    "    identifier=\"104\", \n",
+    "    name=\"Shallow Background 2\",\n",
+    "    trt=\"Stable Continental Crust\",\n",
+    "    geometry=poly_shallow[1], # index sesuai dengan urutan dari total shallow background\n",
     "    upper_depth=0, \n",
     "    lower_depth=20, \n",
     "    mag_scale_rel=\"WC1994\", \n",
