add simple fault conv for SHERIFS

--- a/OQ010_persiapan_file_SHERIFS.ipynb
+++ b/OQ010_persiapan_file_SHERIFS.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "87b561eb",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
    "outputs": [],
    "source": [
     "# menyimpan area patahan ke dalam bentuk geojson\n",
-    "save_area_fault_geojson(gdf_area_faults, 'json_area_fault_KumeringNorth_others.geojson', model=\"Lampung\") # belum diganti namanya"
+    "save_area_fault_geojson(gdf_area_faults, 'json_area_fault_KumeringNorth_others.geojson', model=\"Lampung\")"
    ]
   },
   {
